tests/TestDeca/version1.1/src/test/deca/syntax/invalid/provided/InvalidChars.deca
// test that there's no such a declaration ; Malformed string (error case)




{
    println("Special chars: \"\\\n!");
}